Added Jwt security

--- a/HotelListing2/appsettings.json
+++ b/HotelListing2/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "sqlConnection": "server=DESKTOP-J8VBL8M\\SQLEXPRESS; database=Hotellisting_db; integrated security=true"
   },
+  "Jwt": {
+    "Issuer": "HotelListingAPI",
+    "lifetime": 600
+
+  }, 
   "AllowedHosts": "*"
 }
